--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -31,8 +31,10 @@ jobs:
       with:
         credentials_json: ${{ secrets.GCP_SA_KEY }}
 
-    - name: Set up Cloud SDK
+    - name: Set up Cloud SDK with auth plugin
       uses: google-github-actions/setup-gcloud@v2
+      with:
+        install_components: 'gke-gcloud-auth-plugin'
 
     - name: Configure Docker for Artifact Registry
       run: |
@@ -116,6 +118,26 @@ jobs:
         make
         sudo cp wrk /usr/local/bin/
 
+    - name: Wait for metrics to be available
+      run: |
+        echo "Waiting for metrics server..."
+        for i in {1..30}; do
+          if kubectl top nodes &> /dev/null; then
+            echo "Metrics server is ready"
+            break
+          fi
+          echo "Waiting for metrics... (attempt $i/30)"
+          sleep 10
+        done
+
+    - name: Create wrk POST script
+      run: |
+        cat > post.lua << 'LUA_SCRIPT'
+        wrk.method = "POST"
+        wrk.body = '{"features": [5.1, 3.5, 1.4, 0.2]}'
+        wrk.headers["Content-Type"] = "application/json"
+        LUA_SCRIPT
+
     - name: Test 1 - Baseline with 1 pod and 1000 requests
       run: |
         echo "=== Test 1: 1000 concurrent connections with max 1 pod ==="
@@ -123,15 +145,15 @@ jobs:
         kubectl patch hpa iris-api-hpa -p '{"spec":{"maxReplicas":1}}'
         sleep 30
         
-        wrk -t10 -c1000 -d60s --latency \
-          -s - http://${{ steps.get-ip.outputs.SERVICE_IP }}/health <<EOF
-        wrk.method = "POST"
-        wrk.body   = '{"features": [5.1, 3.5, 1.4, 0.2]}'
-        wrk.headers["Content-Type"] = "application/json"
-        EOF
+        echo "Running wrk benchmark..."
+        wrk -t10 -c1000 -d60s --latency -s post.lua http://${{ steps.get-ip.outputs.SERVICE_IP }}/predict
         
+        echo "Current HPA status:"
         kubectl get hpa
-        kubectl top pods
+        echo "Current pods:"
+        kubectl get pods
+        echo "Pod metrics:"
+        kubectl top pods || echo "Metrics not yet available"
 
     - name: Test 2 - Auto-scaling enabled with 1000 requests
       run: |
@@ -139,17 +161,16 @@ jobs:
         kubectl patch hpa iris-api-hpa -p '{"spec":{"maxReplicas":3}}'
         sleep 30
         
-        wrk -t10 -c1000 -d60s --latency \
-          -s - http://${{ steps.get-ip.outputs.SERVICE_IP }}/health <<EOF
-        wrk.method = "POST"
-        wrk.body   = '{"features": [5.1, 3.5, 1.4, 0.2]}'
-        wrk.headers["Content-Type"] = "application/json"
-        EOF
+        echo "Running wrk benchmark..."
+        wrk -t10 -c1000 -d60s --latency -s post.lua http://${{ steps.get-ip.outputs.SERVICE_IP }}/predict
         
         echo "Observing auto-scaling..."
+        echo "Current HPA status:"
         kubectl get hpa
+        echo "Current pods:"
         kubectl get pods
-        kubectl top pods
+        echo "Pod metrics:"
+        kubectl top pods || echo "Metrics not yet available"
 
     - name: Test 3 - Increased load with 2000 requests (bottleneck demonstration)
       run: |
@@ -158,15 +179,13 @@ jobs:
         kubectl patch hpa iris-api-hpa -p '{"spec":{"maxReplicas":1}}'
         sleep 30
         
-        wrk -t12 -c2000 -d60s --latency \
-          -s - http://${{ steps.get-ip.outputs.SERVICE_IP }}/health <<EOF
-        wrk.method = "POST"
-        wrk.body   = '{"features": [5.1, 3.5, 1.4, 0.2]}'
-        wrk.headers["Content-Type"] = "application/json"
-        EOF
+        echo "Running wrk benchmark..."
+        wrk -t12 -c2000 -d60s --latency -s post.lua http://${{ steps.get-ip.outputs.SERVICE_IP }}/predict
         
+        echo "Final status:"
         kubectl get hpa
-        kubectl top pods
+        kubectl get pods
+        kubectl top pods || echo "Metrics not yet available"
         echo "Notice increased latency and error rates due to single pod limitation"
 
     - name: Final status report
